set font to Lato, monospaced to Mono, fix date wrapping in /tags/

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -11,7 +11,7 @@ body {
 }
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Lato;
   font-size: 18px;
   font-weight: 300;
   line-height: 1.6;
@@ -148,7 +148,7 @@ blockquote {
 
 code,
 pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
+  font-family: Mono;
   color: #333;
   font-size: .75rem;
   padding: 0 4px 0 4px;
@@ -477,7 +477,7 @@ tbody tr:nth-child(odd) th {
     margin-top: 1rem;
 
     &-date {
-      min-width: 4.5rem;
+      min-width: 4.7rem;
       font-size: 0.75rem;
       margin-top: 0.25rem;
       text-transform: uppercase;
